# gecko

./: ARCHITECTURE.md  Cargo.toml  PHASE-2.md  justfile  rustfmt.toml
assets/shaders/: shader.wgsl
crates/gecko_app/: Cargo.toml
crates/gecko_app/src/: lib.rs  main.rs
crates/gecko_core/: Cargo.toml
crates/gecko_core/src/: diagnostics.rs  lib.rs
crates/gecko_editor/: Cargo.toml
crates/gecko_editor/src/: lib.rs  viewport.rs
crates/gecko_editor/src/ui/: console.rs  fonts.rs  mod.rs  theme.rs
crates/gecko_renderer/: Cargo.toml
crates/gecko_renderer/src/: gpu.rs  lib.rs  scene_renderer.rs  surface.rs
crates/gecko_rhi/: Cargo.toml
crates/gecko_rhi/src/: context.rs  conventions.rs  frame.rs  lib.rs  resource.rs  target.rs
crates/gecko_runtime/: Cargo.toml
crates/gecko_runtime/src/: lib.rs
