[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[workspace.dependencies]
gecko_core = { path = "crates/gecko_core" }
gecko_editor = { path = "crates/gecko_editor" }
gecko_renderer = { path = "crates/gecko_renderer" }
gecko_rhi = { path = "crates/gecko_rhi" }
gecko_runtime = { path = "crates/gecko_runtime" }

anyhow = "1.0.103"
bytemuck = "1.25.1"
dear-imgui-rs = { git = "https://github.com/Latias94/dear-imgui-rs", rev = "f0045c2353986c3fb0a9b1ad69b7ac3df783f7e3" }
dear-imgui-wgpu = { git = "https://github.com/Latias94/dear-imgui-rs", rev = "f0045c2353986c3fb0a9b1ad69b7ac3df783f7e3" }
dear-imgui-winit = { git = "https://github.com/Latias94/dear-imgui-rs", rev = "f0045c2353986c3fb0a9b1ad69b7ac3df783f7e3" }
encase = "0.12.0"
glam = "0.33.2"
pollster = "1.0.1"
slotmap = "1.1.1"
thiserror = "2.0.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-tracy = "0.11.4"
wgpu = "30.0.0"
winit = "0.30.13"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
