[package]
name = "gecko_app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["multi-viewport"]
multi-viewport = ["gecko_editor/multi-viewport"]
tracy = ["gecko_core/tracy"]

[dependencies]
anyhow.workspace = true
gecko_core.workspace = true
gecko_editor.workspace = true
gecko_renderer.workspace = true
gecko_runtime.workspace = true
tracing.workspace = true
wgpu.workspace = true
winit.workspace = true

[lints]
workspace = true
