[package]
name = "gecko_rhi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
encase.workspace = true
pollster.workspace = true
slotmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true

[lints]
workspace = true
